@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-76
-Date: 2009-02-11
+Date: 2009-02-12
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
