@@ -1,0 +1,15 @@
+\name{coastline.sle}
+\docType{data}
+\alias{coastline.sle}
+\title{Coastline of St Lawrence Estuary}
+\description{A sample coastline dataset, showing the St Lawrence Estuary.}
+\usage{data(coastline.sle)}
+\source{The data were extracted from the the 1:250,000 ``World Vector Shoreline''
+dataset at the NOAA site.}
+\references{\url{http://www.ngdc.noaa.gov/mgg_coastline}}
+\seealso{Coastlines may be read with
+\code{\link{read.coastline}}, or created with
+\code{\link{as.coastline}}; see these for details of the data format.  Other coastline datasets provided with
+oce are \code{\link{coastline.hal}} and \code{\link{coastline.world}}.}
+\author{Dan Kelley}
+\keyword{misc}
